k8s/app.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
 name: app-deployment
 namespace: petclinic
spec:
 replicas: 2
 selector:
  matchLabels:
   app: petclinic-app
 strategy:
  type: RollingUpdate
  rollingUpdate:
   maxUnavailable: 1
   maxSurge: 1
 template:
  metadata:
   labels:
    app: petclinic-app
  spec:
   containers:
    - name: petclinic-app
      image: darkosekulovski/petclinic:latest
      ports:
       - containerPort: 8080
