k8s/db.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: db-stateful
 namespace: petclinic
spec:
 replicas: 1
 selector:
  matchLabels:
   app: db
 template:
  metadata:
   labels:
    app: db
  spec:
   containers:
    - name: db
      image: postgres:latest
      ports:
       - containerPort: 5432
      volumeMounts:
       - mountPath: /var/lib/postgresql/data
         name: db-mount
   volumes:
    - name: db-mount
      persistentVolumeClaim:
       claimName: db-vc
