k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: app-service
 namespace: petclinic
spec:
 ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
 selector:
  app: petclinic-app
 type: ClusterIP
