k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: app-ingress
 namespace: petclinic
 annotations:
  ingress.kubernetes.io/ssl-redirect: "false"
  ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
  - host: petclinic.com
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: app-service
          port:
           number: 8080
